# mpubsub

./: .flake8  .gitignore  LICENSE  README.md  demo.py  pyproject.toml
src/mpubsub/: __init__.py  broker.py  net.py  typing.py
tests/: __init__.py  test_doc.py  test_pubsub.py  test_weakref.py
